--- a/index.html
+++ b/index.html
@@ -1,1 +1,9 @@
-
+<!DOCTYPE html>
+<html>
+    <head>
+        <title>It Works</title>
+    </head>
+    <body>
+        <p>I think so.</p>
+    </body>
+</html>
