--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
     </head>
     <body>
         <p>I think so.</p>
-        <img src="KBH01.github.io/Media/Audi_Edit.jpg">
+        <img src="Media/Audi_Edit.jpg">
     </body>
 </html>
