--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <body>
         <p>I think so.</p>
         <h1>AUDI</h1>
-        <img src="Audi_Edit.jpg">
+        <img src="Audi_Edit.jpg" height=100>
     </body>
 </html>
